Rework generators to set map properties themselves